# Epoxy_Design

./: .gitignore  0_data_cleaning.ipynb  10_Optimization.py  11_Optimization.py  11_Optimization_Plots.py  11_Update_inference.py  1_Preprocess.py  1_preprocess.py  2_Feature_Engineering.ipynb  2_Feature_Engineering_P1.ipynb  3_Feature_Engineering_P2.py  3_MICE.py  3_MICE_VIF.ipynb  4_Classification_curing.ipynb  4_Classification_epoxy.ipynb  4_Classification_filler.ipynb  4_MICE.py  4_VIF.py  5_Chain_Orchestrator.ipynb  5_Classification_curing.ipynb  5_Classification_step1.ipynb  5_VIF.py  6_Chain_tensile.ipynb  6_Classification_filler.ipynb  6_Classification_step2.ipynb  6_Deep_Learning_step1.ipynb  6_Machine_Learning.ipynb  6_make_train_datasets.py  7_Chain_Orchestrator.ipynb  7_Chain_flexural.ipynb  7_Deep_Learning.py  7_Deep_Learning_step2.ipynb  7_Optimization.py  8_Chain_tensile.ipynb  8_Deep_Learning_step3.ipynb  8_Optimization.py  8_Optimization_Engineering.ipynb  9_Chain_flexural.ipynb  9_Deep_Learning_step1.ipynb  9_Optimization.py  (+9 more)
helpers/: constants.py  function_map.py  make_bounds.py  make_bounds_template.py  tools.py  translation.json
