[project]
name = "EpoxyDesign"
version = "2.0.0"
description = "Epoxy composite design through machine learning"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dragon-ml-toolbox[ml]>=19.3.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.2",
]
